--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
   <!-- <h1 class="app_comp">
     Welcome to {{ title }}!666
   </h1> -->
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <!-- <app-from></app-from> -->
+  <app-search></app-search>
 </div>
 <!-- <h2>朱文龙 </h2> -->
 
