--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,15 @@
-<p>
-  search works!
-</p>
+<div>
+  <h3>京东商城缓存列表功能</h3>
+  <input type="text" [(ngModel)]="searchValue"> <button (click)="doSearch()">搜索</button>
+  <br> &nbsp;
+  <hr>
+  <br>
+  <h4>缓存列表区</h4>
+  <ul>
+    <!-- <li *ngFor="let item of catchList;key=item.id">
+      <input type="checkbox" [(ngModel)]="item.checked"> <span>&nbsp;</span>
+      <span>{{item.title}}</span> <span>&nbsp;</span>
+      <span (click)="delValue(item.id)">x</span> <span>&nbsp;</span>
+    </li> -->
+  </ul>
+</div>
