--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div>
+<div class="app">
   <!-- <app-news></app-news> -->
   <!-- <h1 class="app_comp">
     Welcome to {{ title }}!666
@@ -8,6 +8,7 @@
   <!-- <app-home></app-home> -->
   <!-- <app-from></app-from> -->
   <app-search></app-search>
+  <app-todolist></app-todolist>
 </div>
 <!-- <h2>朱文龙 </h2> -->
 
