--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="search">
   <h3>京东商城缓存列表功能</h3>
-  <input type="text" [(ngModel)]="searchValue"> <button (click)="doSearch()">搜索</button>
+  <input type="text" [(ngModel)]="searchValue">&nbsp; <button (click)="doSearch()">搜索</button>
   <br> &nbsp;
   <hr>
   <br>
@@ -10,7 +10,7 @@
       <input type="checkbox" [(ngModel)]="item.checked"> <span>-----&nbsp;</span>
       <span>{{item.title}}------</span> <span>&nbsp;</span>
       <span>{{item.id}}------</span> <span>&nbsp;</span>
-      <span>x</span> <span>&nbsp;</span>
+      <button (click)="delHander(item.id)">删除</button>
       <!-- <span (click)="delValue(item.id)">x</span> <span>&nbsp;</span> -->
     </li>
   </ul>
