dom , transition,viewsChild

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,10 @@
   </h1> -->
   <!-- <app-home></app-home> -->
   <!-- <app-from></app-from> -->
-  <app-search></app-search>
-  <app-todolist></app-todolist>
+  <!-- <app-search></app-search> -->
+  <!-- <app-todolist></app-todolist> -->
+  <!-- <app-doms></app-doms> -->
+  <app-transition></app-transition>
 </div>
 <!-- <h2>朱文龙 </h2> -->
 
