--- a/src/app/components/todolist/todolist.component.html
+++ b/src/app/components/todolist/todolist.component.html
@@ -5,7 +5,7 @@
 <h3>代办事项</h3>
 <ul>
   <li *ngFor="let item of historyList;let key = index" [hidden]="item.status == true">
-    <input type="checkbox" [(ngModel)]="item.status"> <span>------</span>
+    <input type="checkbox" [(ngModel)]="item.status" (change)="changeChecked()"> <span>------</span>
 
     {{item.title}}<span>------</span>
     <button (click)="delHistory(key)">删除</button>
@@ -16,7 +16,7 @@
 <h3>已完成事项</h3>
 <ul>
   <li *ngFor="let item of historyList;let key = index" [hidden]="item.status == false">
-    <input type="checkbox" [(ngModel)]="item.status"> <span>------</span>
+    <input type="checkbox" [(ngModel)]="item.status" (change)="changeChecked()"> <span>------</span>
 
     {{item.title}}<span>------</span>
     <button (click)="delHistory(key)">删除</button>
