--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,13 @@
   <!-- <app-search></app-search> -->
   <!-- <app-todolist></app-todolist> -->
   <!-- <app-doms></app-doms> -->
-  <app-transition></app-transition>
+  <!-- <app-transition></app-transition> -->
+  <!-- <app-parent></app-parent> -->
+  <!-- <app-life-cycle [app]="Parentapp" *ngIf="flag"></app-life-cycle>
+    <button (click)="changeApp()">父组件按钮，修改传给子组件的数据</button>
+    <button (click)="chengeFlag()">卸载组件</button> -->
+  <app-request></app-request>
+  <!-- <app-map-andfilter></app-map-andfilter> -->
 </div>
 <!-- <h2>朱文龙 </h2> -->
 
