--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,7 +1,10 @@
 <div class="newsComponent">
   <app-header></app-header>
   <p>
-    news works!我是新闻组件
+    news works!我是新闻组件childmsg---{{childmsg}}
+  </p>
+  <p>
+    news works!我是新闻组件titleToNews---{{titleToNews}}
   </p>
   <h2>{{title}}</h2>
   <p>{{msg}}</p>
