--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,38 @@
   <!-- <app-life-cycle [app]="Parentapp" *ngIf="flag"></app-life-cycle>
     <button (click)="changeApp()">父组件按钮，修改传给子组件的数据</button>
     <button (click)="chengeFlag()">卸载组件</button> -->
-  <app-request></app-request>
   <!-- <app-map-andfilter></app-map-andfilter> -->
+  <!-- <app-request></app-request> -->
+  <!-- <app-http></app-http> -->
 </div>
 <!-- <h2>朱文龙 </h2> -->
+<div>
+  <a [routerLink]="[ '/NewsComponent' ]" routerLinkActive="active">NewsComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a [routerLink]="[ '/HomeComponent' ]" routerLinkActive="active">HomeComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a [routerLink]="[ '/HeaderComponent' ]" routerLinkActive="active">HeaderComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a [routerLink]="[ '/FromComponent' ]" routerLinkActive="active">FromComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <br> <br>
+  <a routerLink="/SearchComponent" routerLinkActive="active">SearchComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/TodolistComponent" routerLinkActive="active">TodolistComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/DomsComponent" routerLinkActive="active">DomsComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/TransitionComponent" routerLinkActive="active">TransitionComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/ParentComponent" routerLinkActive="active">ParentComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <br> <br>
+  <a routerLink="/ChildComponent" routerLinkActive="active">ChildComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/FooterComponent" routerLinkActive="active">FooterComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/LifeCycleComponent" routerLinkActive="active">LifeCycleComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/RequestComponent" routerLinkActive="active">RequestComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/MapAndfilterComponent" routerLinkActive="active">MapAndfilterComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <br> <br>
+  <a routerLink="/HttpComponent" routerLinkActive="active">HttpComponent页面</a> <span>&nbsp;&nbsp;</span>
+  <a routerLink="/ProductComponent" routerLinkActive="active">商品列表</a> <span>&nbsp;&nbsp;</span>
+  <a [routerLink]="[ '/ProductDetailComponent' ]" routerLinkActive="active">商品详情</a>
+  <span>&nbsp;&nbsp;</span>
+  <!-- <a routerLink="home">home页面</a> <span>&nbsp;&nbsp;</span> -->
+
+  <br>&nbsp;
+  <hr>
+</div>
 
 
 <router-outlet></router-outlet>
