--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,8 +40,9 @@
   <br> <br>
   <a routerLink="/HttpComponent" routerLinkActive="active">HttpComponent页面</a> <span>&nbsp;&nbsp;</span>
   <a routerLink="/ProductComponent" routerLinkActive="active">商品列表</a> <span>&nbsp;&nbsp;</span>
-  <a [routerLink]="[ '/ProductDetailComponent' ]" routerLinkActive="active">商品详情</a>
-  <span>&nbsp;&nbsp;</span>
+  <a [routerLink]="[ '/ProductDetailComponent' ]" routerLinkActive="active">商品详情</a> <span>&nbsp;&nbsp;</span>
+  <a [routerLink]="[ '/TemplateComponent' ]" routerLinkActive="active">项目模板</a> <span>&nbsp;&nbsp;</span>
+
   <!-- <a routerLink="home">home页面</a> <span>&nbsp;&nbsp;</span> -->
 
   <br>&nbsp;
